<resources>
    <string name="app_name">Make Minyan</string>
    <string name="UserName_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="LOGIN">LOGIN!</string>
    <string name="Register">Register!</string>
    <string name="ShowPass">Show Password</string>
    <string name="InvalidUserNameOrPassword">invalid user name\n or password</string>
    <string name="CreateMinyan">Create Minyan</string>
    <string name="CreateShul">Create Shul</string>
    <string name="ShulName_hint">Shul\'s Name</string>
    <string name="Description_hint">Description</string>

    <string name="EmptyField">There is an empty field</string>

    <string name="Profile">Profile</string>
    <string name="LogOut">Log Out</string>
    <string name="MoreOptions">MoreOptions</string>

    <string name="NewUserNm">New User Name</string>
    <string name="NewPass">New Password</string>
    <string name="VerifyNewPass">Verify New Password</string>
    <string name="UpdateProfile">Update Profile</string>

    <string name="Email">Email</string>
    <string name="Telephone">Telephone</string>
    <string name="Website">Website</string>
    <string name="City">City</string>
    <string name="Street">Street</string>
    <string name="Number">Number</string>
    <string name="AddShul">Add Shul</string>

    <string name="Shachrit">Shachrit</string>
    <string name="Mincha">Mincha</string>
    <string name="Arvit">Arvit</string>
    <string name="CoseDays">Choose Days:</string>
    <string name="SUN">SUN </string>
    <string name="MON">MUN </string>
    <string name="TUE">TUE </string>
    <string name="WEN">WEN </string>
    <string name="THU">THU </string>
    <string name="FRI">FRI </string>
    <string name="SAT">SAT </string>
    <string name="EveryDay">everey day  </string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="AddMinyan">Add Minyan</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Log-Out</item>
        <item>Pages</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/add_pic</item>
        <item>@drawable/ic_logout</item>
        <item>@mipmap/profile_pic</item>

    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_navigation_controller">Navigation_controller</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Spinner content Description -->
    <string name="nussach_prompt">Choose a Nussach</string>

    <string-array name="nussach_arrays">
        <item>Ashkenazi</item>
        <item>Sfaradi</item>
        <item>Else</item>

    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
