<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <EditText
       android:textSize="20sp"
       android:id="@+id/etShulname"
       android:layout_marginTop="18dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/ShulName_hint"
       android:background="@android:drawable/editbox_background"/>

   <EditText
       android:textSize="20sp"
       android:layout_marginTop="18dp"
       android:id="@+id/etEmail"
       android:inputType="textEmailAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/Email"
       android:background="@android:drawable/editbox_background"/>

   <EditText
       android:textSize="20sp"
       android:id="@+id/etTelephone"

       android:layout_marginTop="18dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="phone"
       android:hint="@string/Telephone"
       android:background="@android:drawable/editbox_background"/>

   <EditText
       android:textSize="20sp"
       android:id="@+id/etWebsite"
       android:layout_marginTop="18dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/Website"
       android:background="@android:drawable/editbox_background"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="18dp">
      <EditText
          android:textSize="20sp"
          android:layout_weight="2"
          android:id="@+id/etCity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/City"
          android:background="@android:drawable/editbox_background"/>

      <EditText
          android:textSize="20sp"
          android:layout_weight="3"
          android:id="@+id/etStreet"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/Street"
          android:background="@android:drawable/editbox_background"/>

      <EditText
          android:textSize="20sp"
          android:layout_weight="1"
          android:id="@+id/etNumber"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/Number"
          android:inputType="number"
          android:background="@android:drawable/editbox_background"/>
   </LinearLayout>

   <EditText
       android:layout_marginTop="18dp"
       android:textSize="18sp"
       android:id="@+id/etDescription"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/Description_hint"
       android:background="@android:drawable/editbox_background"/>

   <Button
       android:id="@+id/btnAddShl"
       android:layout_gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="18dp"
       android:text="@string/AddShul"/>

   <!-- public String name;
    public String location;
    public int _id;
    public String description;
    public String username;
    public String email;
    public String website;
    public String telephone; -->

</LinearLayout>