<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@android:drawable/editbox_background"
        android:hint= "@string/NewUserNm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/etNewPass"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/NewPass" />

        <CheckBox
            android:text="@string/ShowPass"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:id="@+id/cbShowPass1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/etVerifyNewPass"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/VerifyNewPass" />

        <CheckBox
            android:text="@string/ShowPass"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:id="@+id/cbShowPass2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UpdateProfile"
        android:layout_marginTop="18dp"
        android:layout_gravity="center" />

</LinearLayout>