<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="minyanproject.ishai.harel.makeminyan.controller.MainActivity">

        <!-- UserName -->
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@android:drawable/editbox_background"
            android:hint= "@string/UserName_hint"/>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:id="@+id/etUserPassword"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/password_hint" />

                <CheckBox
                    android:text="@string/ShowPass"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:id="@+id/cbShowPass" />
        </LinearLayout>

        <!-- LOGIN -->
        <Button
            android:id="@+id/btnLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            android:layout_marginTop="18dp"
            android:layout_gravity="center" />

        <!-- Register -->
        <Button
            android:text="@string/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegisterButton"
            android:layout_gravity="center"/>

</LinearLayout>
